syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.bookservice.grpc";
option java_outer_classname = "BookServiceProto";

package bookservice;

message Book {
    int64 id = 1;
    string title = 2;
    string author = 3;
    double price = 4;
}

// Request and Response messages
message GetBookRequest {
    int64 id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message CreateBookRequest {
    string title = 1;
    string author = 2;
    double price = 3;
}

message CreateBookResponse {
    Book book = 1;
}

message ListBooksRequest {}

message ListBooksResponse {
    repeated Book books = 1;
}

service BookService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc CreateBook(CreateBookRequest) returns (CreateBookResponse);
    rpc ListBooks(ListBooksRequest) returns (ListBooksResponse);
}
